--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div style="padding-top: 90px;" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
